--- a/src/layout/SalesPageLayout.fxml
+++ b/src/layout/SalesPageLayout.fxml
@@ -2,11 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -55,6 +57,24 @@
 				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
 			</padding>
          <children>
+            <DatePicker>
+               <VBox.margin>
+                  <Insets left="220.0" />
+               </VBox.margin>
+            </DatePicker>
+            <Label text="Order ID:">
+               <VBox.margin>
+                  <Insets top="-20.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Century Gothic" size="14.0" />
+               </font>
+            </Label>
+            <TextField maxWidth="75.0" prefHeight="25.0" prefWidth="75.0">
+               <VBox.margin>
+                  <Insets left="75.0" top="-20.0" />
+               </VBox.margin>
+            </TextField>
       				<TableView fx:id="orderTableView" editable="true" maxWidth="600.0" prefHeight="276.0" prefWidth="559.0">
       					<columns>
       						<TableColumn fx:id="coffeeIDColumn" prefWidth="26.888856291770935" sortable="false" text="ID" />
@@ -64,6 +84,9 @@
       						<TableColumn fx:id="coffeeExtrasColumn" prefWidth="71.55548095703125" sortable="false" text="Extras" />
       						<TableColumn fx:id="coffeePriceColumn" prefWidth="77.33336385091144" sortable="false" text="Price" />
       					</columns>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
       				</TableView>
          </children>
 		</VBox>
