--- a/bin/layout/SalesPageLayout.fxml
+++ b/bin/layout/SalesPageLayout.fxml
@@ -70,7 +70,7 @@
                   <Font name="Century Gothic" size="14.0" />
                </font>
             </Label>
-            <TextField maxWidth="75.0" prefHeight="25.0" prefWidth="75.0">
+            <TextField fx:id="orderIDLabel" maxWidth="75.0" prefHeight="25.0" prefWidth="75.0">
                <VBox.margin>
                   <Insets left="75.0" top="-20.0" />
                </VBox.margin>
@@ -224,25 +224,25 @@
 				<InnerShadow />
 			</effect>
 		</Button>
-		<Button alignment="CENTER" contentDisplay="CENTER" layoutX="560.0" layoutY="537.0" mnemonicParsing="false" onMouseClicked="#complete" prefHeight="47.0" prefWidth="213.0" style="-fx-background-color: #90caff;" text="TRANSACTION COMPLETE" textAlignment="CENTER" textFill="#e033ac">
+		<Button alignment="CENTER" contentDisplay="CENTER" layoutX="560.0" layoutY="537.0" mnemonicParsing="false" onMouseClicked="#complete" prefHeight="47.0" prefWidth="243.0" style="-fx-background-color: #90caff;" text="TRANSACTION COMPLETE" textAlignment="CENTER" textFill="#e033ac">
 			<font>
-				<Font name="Century Gothic" size="14.0" />
+				<Font name="Century Gothic Bold" size="18.0" />
 			</font>
 			<effect>
 				<InnerShadow />
 			</effect>
 		</Button>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="246.0" layoutY="509.0" mnemonicParsing="false" onMouseClicked="#cancelOrder" prefHeight="38.0" prefWidth="151.0" style="-fx-background-color: #FFFFFF;" text="Cancel Order" textAlignment="CENTER">
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="246.0" layoutY="509.0" mnemonicParsing="false" onMouseClicked="#cancelOrder" prefHeight="53.0" prefWidth="151.0" style="-fx-background-color: #FFFFFF;" text="Cancel Order" textAlignment="CENTER" textFill="#eb0dc6">
          <font>
-            <Font name="Century Gothic Bold" size="16.0" />
+            <Font name="Century Gothic Bold" size="18.0" />
          </font>
          <effect>
             <InnerShadow />
          </effect>
       </Button>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="509.0" mnemonicParsing="false" onMouseClicked="#newOrder" prefHeight="38.0" prefWidth="170.0" style="-fx-background-color: #ffff;" text="New Order" textAlignment="CENTER" textFill="#383237">
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="509.0" mnemonicParsing="false" onMouseClicked="#newOrder" prefHeight="53.0" prefWidth="170.0" style="-fx-background-color: #ffff;" text="New Order" textAlignment="CENTER" textFill="#383237">
          <font>
-            <Font name="Century Gothic Bold" size="14.0" />
+            <Font name="Century Gothic Bold" size="18.0" />
          </font>
          <effect>
             <InnerShadow />
