--- a/src/layout/SalesPageLayout.fxml
+++ b/src/layout/SalesPageLayout.fxml
@@ -216,7 +216,7 @@
 				<Font name="Century Gothic" size="18.0" />
 			</font>
 		</MenuButton>
-		<Button alignment="CENTER" contentDisplay="CENTER" layoutX="502.0" layoutY="479.0" mnemonicParsing="false" onAction="#pricePerCoffee" onMouseClicked="#pricePerCoffee" prefHeight="38.0" prefWidth="131.0" style="-fx-background-color: #FFFFFF;" text="Price/Coffee" textAlignment="CENTER">
+		<Button alignment="CENTER" contentDisplay="CENTER" layoutX="502.0" layoutY="479.0" mnemonicParsing="false" onMouseClicked="#pricePerCoffee" prefHeight="38.0" prefWidth="131.0" style="-fx-background-color: #FFFFFF;" text="Price/Coffee" textAlignment="CENTER">
 			<font>
 				<Font name="Century Gothic" size="16.0" />
 			</font>
@@ -248,7 +248,7 @@
             <InnerShadow />
          </effect>
       </Button>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="712.0" layoutY="478.0" mnemonicParsing="false" onAction="#pricePerCoffee" onMouseClicked="#totalPriceButton" prefHeight="38.0" prefWidth="131.0" style="-fx-background-color: #FFFFFF;" text="TotalPrice" textAlignment="CENTER">
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="712.0" layoutY="478.0" mnemonicParsing="false" onMouseClicked="#totalPriceButton" prefHeight="38.0" prefWidth="131.0" style="-fx-background-color: #FFFFFF;" text="TotalPrice" textAlignment="CENTER">
          <font>
             <Font name="Century Gothic" size="16.0" />
          </font>
