--- a/bin/layout/ReportPageLayout.fxml
+++ b/bin/layout/ReportPageLayout.fxml
@@ -11,16 +11,16 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ReportPage">
+<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ReportPage">
    <children>
-      <HBox layoutX="-1.0" prefHeight="100.0" prefWidth="550.0" style="-fx-background-color: #FFFFFF;">
+      <HBox layoutX="-1.0" prefHeight="100.0" prefWidth="901.0" style="-fx-background-color: #FFFFFF;">
          <children>
             <ImageView fitHeight="60.0" fitWidth="60.0" onMouseClicked="#salesPage" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../sellIicon.png" />
                </image>
                <HBox.margin>
-                  <Insets left="150.0" top="25.0" />
+                  <Insets left="375.0" top="25.0" />
                </HBox.margin>
             </ImageView>
             <ImageView fitHeight="60.0" fitWidth="60.0" onMouseClicked="#inventoryPage" pickOnBounds="true" preserveRatio="true">
@@ -41,23 +41,23 @@
             </ImageView>
          </children>
       </HBox>
-      <ImageView fitHeight="65.0" fitWidth="65.0" layoutX="50.0" layoutY="20.0" onMouseClicked="#homePage" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="65.0" fitWidth="65.0" layoutX="275.0" layoutY="20.0" onMouseClicked="#homePage" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../homeicon.png" />
          </image>
       </ImageView>
-      <LineChart fx:id="lineChart" layoutX="-1.0" layoutY="198.0" prefHeight="383.0" prefWidth="550.0" title="Sales Report">
+      <LineChart fx:id="lineChart" layoutX="20.0" layoutY="198.0" prefHeight="367.0" prefWidth="853.0" title="Sales Report">
         <xAxis>
           <CategoryAxis fx:id="date" side="BOTTOM" />
         </xAxis>
         <yAxis>
-          <NumberAxis fx:id="revenue" label="REVENUE" side="LEFT" />
+          <NumberAxis fx:id="revenue" label="REVENUE" prefHeight="318.0" prefWidth="53.0" side="LEFT" />
         </yAxis>
       </LineChart>
-      <DatePicker fx:id="calendar" layoutX="129.0" layoutY="155.0" prefHeight="34.0" prefWidth="268.0" />
-      <ToggleButton fx:id="dayButton" layoutX="140.0" layoutY="115.0" mnemonicParsing="false" text="DAY" />
-      <ToggleButton fx:id="weekButton" layoutX="236.0" layoutY="115.0" mnemonicParsing="false" text="WEEK" />
-      <ToggleButton fx:id="monthButton" layoutX="332.0" layoutY="115.0" mnemonicParsing="false" text="MONTH" />
+      <DatePicker fx:id="calendar" layoutX="350.0" layoutY="155.0" prefHeight="34.0" prefWidth="268.0" />
+      <ToggleButton fx:id="dayButton" layoutX="300.0" layoutY="115.0" mnemonicParsing="false" text="DAY" />
+      <ToggleButton fx:id="weekButton" layoutX="450.0" layoutY="115.0" mnemonicParsing="false" text="WEEK" />
+      <ToggleButton fx:id="monthButton" layoutX="600.0" layoutY="115.0" mnemonicParsing="false" text="MONTH" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
